Implementar logo de inicio, ya las Funciones están implementadas

--- a/src/pages/sin-ini/sin-ini.scss
+++ b/src/pages/sin-ini/sin-ini.scss
@@ -1,9 +1,14 @@
 page-sin-ini {
 
+
 h6{
     color:#fff;
+    font-size: 1em;
 }
 img{
     margin-top:20px;
+}
+ion-label{
+    font-size: 0.7em;
 }
 }
