--- a/src/pages/con-ini/con-ini.scss
+++ b/src/pages/con-ini/con-ini.scss
@@ -1,9 +1,13 @@
 page-con-ini {
     h6{
         color:#fff;
+        font-size: 1em;
     }
     img{
         margin-top:20px;
+    }
+    ion-label{
+        font-size: 0.7em;
     }
 
 }
